Add completed footer and hover states for all links

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "Easybank",
-        "mixins"
+        "Elems",
+        "Youtube",
+        "mixins",
+        "smed"
     ]
 }
